--- a/Projects/Barricade/packages.config
+++ b/Projects/Barricade/packages.config
@@ -3,6 +3,5 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net451" />
-  <package id="Utopia" version="13.10.19.0" targetFramework="net451" />
-  <package id="Utopia.Security" version="13.10.19.0" targetFramework="net451" />
+  <package id="Rijndael256" version="1.0.0.0" targetFramework="net451" />
 </packages>
