--- a/Projects/Barricade/Barricade.csproj
+++ b/Projects/Barricade/Barricade.csproj
@@ -34,8 +34,9 @@
     <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.4.5.11\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="Rijndael256">
-      <HintPath>..\packages\Rijndael256.1.0.0.0\lib\net40\Rijndael256.dll</HintPath>
+    <Reference Include="Rijndael256, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Rijndael256.1.0.1.0\lib\net40\Rijndael256.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
