--- a/Src/Barricade/Barricade.csproj
+++ b/Src/Barricade/Barricade.csproj
@@ -6,7 +6,7 @@
     <AssemblyTitle>Barricade</AssemblyTitle>
     <VersionPrefix>2.0.0</VersionPrefix>
     <Authors>2Toad, LLC</Authors>
-    <TargetFrameworks>net451;net462</TargetFrameworks>
+    <TargetFramework>net462</TargetFramework>
     <AssemblyName>Barricade</AssemblyName>
     <PackageId>Barricade</PackageId>
     <PackageTags>2Toad;Barricade;Security;Password;Claims;OAuth;Authentication;Authorization;Membership;Users</PackageTags>
@@ -15,23 +15,21 @@
     <RuntimeIdentifiers>win</RuntimeIdentifiers>
     <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
     <Version>3.0.0</Version>
-    <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath>bin\Debug\</OutputPath>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <Reference Include="System" />
+    <Reference Include="Microsoft.CSharp" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.3" />
     <PackageReference Include="CacheManager.Microsoft.Extensions.Caching.Memory" Version="0.9.3" />
     <PackageReference Include="Rijndael256" Version="1.0.1" />
   </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net451' ">
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net462' ">
-    <Reference Include="System" />
-    <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
-
 </Project>
